<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context="com.example.mappe1.SpillActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">
        <!-- Regnestyker kommer her -->
        <TextView
            android:id="@+id/visRegnestykke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <!-- Input -->
    <EditText
        android:id="@+id/Input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/SkrivInnSvar"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>
    <!-- Knapper for tall -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/knapp_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knapp_en"
                android:layout_weight="1"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/knapp_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knapp_to"
                android:layout_weight="1"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/knapp_tre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knapp_tre"
                android:layout_weight="1"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/knapp_fire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knapp_fire"
                android:layout_weight="1"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/knapp_fem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knapp_fem"
                android:layout_weight="1"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/knapp_seks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knapp_seks"
                android:layout_weight="1"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/knapp_syv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knapp_syv"
                android:layout_weight="1"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/knapp_atte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knapp_atte"
                android:layout_weight="1"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/knapp_ni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knapp_ni"
                android:layout_weight="1"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/knapp_slett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/knapp_slett"
                android:backgroundTint="@color/transparentOrange"
                android:textColor="@color/darkOrange"/>
            <Button
                android:id="@+id/knapp_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/knapp_null"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/knapp_sjekk_svar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sjekkSvar"
                android:backgroundTint="@color/customWhite"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>