<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/math_wallpaper"
    tools:context=".MainActivity">
    <!-- Tittel -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <!-- Knapper -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">
        <Button
            android:id="@+id/StartSpill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Start_Spill"
            android:backgroundTint="@color/customWhite"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/OmSpill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Om_Spill"
            android:backgroundTint="@color/customWhite"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/Preferanser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Preferanser"
            android:backgroundTint="@color/customWhite"
            android:textColor="@color/black"/>

    </LinearLayout>
</LinearLayout>