<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Preferanser"
        android:textSize="40sp"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <!-- Antall tall -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp"
        android:background="@drawable/border">
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/antallSpørsmål"
            android:layout_weight="2"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <Spinner
            android:id="@+id/antallSporsmalSpinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1" />
    </LinearLayout>
    <!-- Språk -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp"
        android:background="@drawable/border">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sprok"
            android:layout_weight="2"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/SprokSpinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>